--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/build.xml
@@ -12,9 +12,9 @@
  *  
  ***************************************************************************
  -->
-<project name="org.eclipse.datatools.sqltools.db.generic" default="build.jars" basedir=".">
+<project name="org.eclipse.datatools.sqltools.routineeditor" default="build.jars" basedir=".">
 	<import file="../org.eclipse.datatools.build/common_build.xml" optional="true"/>
-	<property name="module.name" value="org.eclipse.datatools.sqltools.db.generic"/>
+	<property name="module.name" value="org.eclipse.datatools.sqltools.routineeditor"/>
 
 	<property name="basews" value="${ws}"/>
 	<property name="baseos" value="${os}"/>
@@ -23,11 +23,9 @@
 	<property name="eclipse.home" location="."/>
 	<property file="build.properties"/>
 	<!-- JavaDoc settings -->
-	<!-- No JavaDoc for this plugin -->
-	<property name="add.javadoc" value="false"/>
-	<property name="javadocWindowTitle" value="DTP SQL Development Tools Generic Database Support"/>
-	<property name="javadocDocTitle" value="DTP SQL Development Tools Generic Database Support API (Internal)"/>
-	<property name="javadocPackages" value="org.eclipse.datatools.sqltools.db.generic.*"/>
+	<property name="javadocWindowTitle" value="DTP SQL Tools Rountine Editor Framework"/>
+	<property name="javadocDocTitle" value="DTP SQL Tools Rountine Editor Framework API (Internal)"/>
+	<property name="javadocPackages" value="org.eclipse.datatools.sqltools.routineeditor.*"/>
 	<property name="javadocFooter" value="&lt;i>Copyright &#169;  2006 Sybase, Inc. and others. All rights reserved. &lt;/i>"/>
 	<!-- Compiler settings. -->
 	<property name="javacFailOnError" value="true"/>
@@ -36,7 +34,7 @@
 	<property name="javacSource" value="${javac.source}"/>
 	<property name="javacTarget" value="${javac.target}"/>
 	<property name="compilerArg" value=""/>
-	<path id="path_bootclasspath">
+<path id="path_bootclasspath">
 		<fileset dir="${java.home}/lib">
 			<include name="*.jar"/>
 		</fileset>
@@ -51,6 +49,13 @@
 			<include name="org.eclipse.ui.workbench_*.jar"/>
 			<include name="org.eclipse.jface.text_*.jar"/>
 			<include name="org.eclipse.text_*.jar"/>
+			<include name="org.eclipse.ui.workbench.texteditor_*.jar"/>
+			<include name="org.eclipse.core.resources_*.jar"/>
+			<include name="org.eclipse.ui.editors_*.jar"/>
+			<include name="org.eclipse.core.filebuffers_*.jar"/>
+			<include name="org.eclipse.ui.views_*.jar"/>
+			<include name="org.eclipse.debug.core_*.jar"/>
+			<include name="org.eclipse.debug.ui_*.jar"/>
 			<!-- Include jared EMF plug-ins -->
 			<include name="org.eclipse.emf.ecore_*.jar"/>
 			<include name="org.eclipse.emf.common_*.jar"/>
@@ -69,6 +74,13 @@
 			<include name="org.eclipse.ui.workbench_*/org.eclipse.ui.workbench_*.jar"/>
 			<include name="org.eclipse.jface.text_*/org.eclipse.jface.text_*.jar"/>
 			<include name="org.eclipse.text_*/org.eclipse.text_*.jar"/>
+			<include name="org.eclipse.ui.workbench.texteditor_*/org.eclipse.ui.workbench.texteditor_*.jar"/>
+			<include name="org.eclipse.core.resources_*/org.eclipse.core.resources_*.jar"/>
+			<include name="org.eclipse.ui.editors_*/org.eclipse.ui.editors_*.jar"/>
+			<include name="org.eclipse.core.filebuffers_*/org.eclipse.core.filebuffers_*.jar"/>
+			<include name="org.eclipse.ui.views_*/org.eclipse.ui.views_*.jar"/>
+			<include name="org.eclipse.debug.core_*/org.eclipse.debug.core_*.jar"/>
+			<include name="org.eclipse.debug.core.ui_*/org.eclipse.debug.ui_*.jar"/>
 			<!-- Include expanded EMF plug-ins -->
 			<include name="org.eclipse.core.runtime_*/org.eclipse.core.runtime_*.jar"/>
 			<include name="org.eclipse.osgi_*/org.eclipse.osgi_*.jar"/>
@@ -81,18 +93,28 @@
 		</fileset>
 		<!-- Dependencies on other DTP plug-ins, built before this one -->
 		<fileset dir="../">
-			<include  name="org.eclipse.datatools.sqltools.sql/bin/"/>
-			<include  name="org.eclipse.datatools.sqltools.sql/sqltools.jar"/>
-			<include  name="org.eclipse.datatools.sqltools.editor.core/bin/"/>
-			<include  name="org.eclipse.datatools.sqltools.editor.core/sqleditorframe.jar"/>
-			<include  name="org.eclipse.datatools.modelbase.dbdefinition/bin"/>
-			<include  name="org.eclipse.datatools.modelbase.dbdefinition/databasedefinition.jar"/>
-			<include  name="org.eclipse.datatools.modelbase.sql/bin/"/>
-			<include  name="org.eclipse.datatools.modelbase.sql/sqlmodel.jar"/>
-			<include  name="org.eclipse.datatools.connectivity/bin/"/>
-			<include  name="org.eclipse.datatools.connectivity/connectivity.jar"/>
-			<include  name="org.eclipse.datatools.connectivity.sqm.core/bin"/>
-			<include  name="org.eclipse.datatools.connectivity.sqm.core/rdbcore.jar"/>		
+				<include name="org.eclipse.datatools.sqltools.sqleditor/bin/"/>
+				<include name="org.eclipse.datatools.sqltools.sqleditor/sqleditor.jar"/>
+				<include name="org.eclipse.datatools.modelbase.sql/bin/"/>
+				<include name="org.eclipse.datatools.modelbase.sql/sqlmodel.jar"/>
+				<include name="org.eclipse.datatools.connectivity/bin/"/>
+				<include name="org.eclipse.datatools.connectivity/connectivity.jar"/>
+				<include name="org.eclipse.datatools.modelbase.dbdefinition/bin"/>
+				<include name="org.eclipse.datatools.modelbase.dbdefinition/databasedefinition.jar"/>
+				<include name="org.eclipse.datatools.sqltools.editor.core/bin/"/>
+				<include name="org.eclipse.datatools.sqltools.editor.core/sqleditorframe.jar"/>
+				<include name="org.eclipse.datatools.sqltools.sql/bin/"/>
+				<include name="org.eclipse.datatools.sqltools.sql/sqltools.jar"/>
+				<include name="org.eclipse.datatools.connectivity.sqm.core/bin"/>
+				<include name="org.eclipse.datatools.connectivity.sqm.core/rdbcore.jar"/>
+				<include name="org.eclipse.datatools.sqltools.result/bin/"/>
+				<include name="org.eclipse.datatools.sqltools.result/sqlresult.jar"/>
+				<include name="org.eclipse.datatools.connectivity.ui/bin/"/>
+				<include name="org.eclipse.datatools.connectivity.ui/connectivityui.jar"/>
+				<include name="org.eclipse.datatools.modelbase.sql.query/bin/"/>
+				<include name="org.eclipse.datatools.modelbase.sql.query/sqlquerymodel.jar"/>
+				<include name="org.eclipse.datatools.sqltools.common.ui/bin/"/>
+				<include name="org.eclipse.datatools.sqltools.common.ui/sqltoolscommonui.jar"/>
 		</fileset>
 	</path>
 	<property name="bootclasspath" refid="path_bootclasspath"/>
@@ -115,7 +137,7 @@
 
 	</target>
 
-	<target name="build.update.jar" depends="init" description="Build the plug-in: org.eclipse.datatools.sqltools.db.generic for an update site.">
+	<target name="build.update.jar" depends="init" description="Build the plug-in: org.eclipse.datatools.sqltools.routineeditor for an update site.">
 		<delete dir="${temp.folder}"/>
 		<mkdir dir="${temp.folder}"/>
 		<antcall target="build.jars"/>
@@ -126,51 +148,51 @@
 		<delete dir="${temp.folder}"/>
 	</target>
 
-	<target name="genericdb.jar" depends="init" unless="genericdb.jar" description="Create jar: org.eclipse.datatools.sqltools.db.generic genericdb.jar.">
-		<delete dir="${temp.folder}/genericdb.jar.bin"/>
-		<mkdir dir="${temp.folder}/genericdb.jar.bin"/>
+	<target name="routineeditor.jar" depends="init" unless="routineeditor.jar" description="Create jar: org.eclipse.datatools.sqltools.routineeditor routineeditor.jar.">
+		<delete dir="${temp.folder}/routineeditor.jar.bin"/>
+		<mkdir dir="${temp.folder}/routineeditor.jar.bin"/>
 		<!-- compile the source code -->
-		<javac destdir="${temp.folder}/genericdb.jar.bin" failonerror="${javacFailOnError}" verbose="${javacVerbose}" debug="${javacDebugInfo}" includeAntRuntime="no" bootclasspath="${bootclasspath}" source="${javacSource}" target="${javacTarget}"		>
+		<javac destdir="${temp.folder}/routineeditor.jar.bin" failonerror="${javacFailOnError}" verbose="${javacVerbose}" debug="${javacDebugInfo}" includeAntRuntime="no" bootclasspath="${bootclasspath}" source="${javacSource}" target="${javacTarget}"		>
 			<compilerarg line="${compilerArg}"/>
 			<classpath refid="path_bootclasspath"/>
 			<src path="src/"/>
 			</javac>
 		<!-- Copy necessary resources -->
-		<copy todir="${temp.folder}/genericdb.jar.bin" failonerror="true" overwrite="false">
+		<copy todir="${temp.folder}/routineeditor.jar.bin" failonerror="true" overwrite="false">
 			<fileset dir="src/" excludes="**/*.java, **/package.htm*,null"			/>
 		</copy>
 		<mkdir dir="${build.result.folder}"/>
-		<jar destfile="${build.result.folder}/genericdb.jar" basedir="${temp.folder}/genericdb.jar.bin"/>
-		<delete dir="${temp.folder}/genericdb.jar.bin"/>
+		<jar destfile="${build.result.folder}/routineeditor.jar" basedir="${temp.folder}/routineeditor.jar.bin"/>
+		<delete dir="${temp.folder}/routineeditor.jar.bin"/>
 	</target>
 
-	<target name="genericdbsrc.zip" depends="init" unless="genericdbsrc.zip">
+	<target name="routineeditorsrc.zip" depends="init" unless="routineeditorsrc.zip">
 		<mkdir dir="${build.result.folder}"/>
-		<zip destfile="${build.result.folder}/genericdbsrc.zip" filesonly="false" whenempty="skip" update="false">
+		<zip destfile="${build.result.folder}/routineeditorsrc.zip" filesonly="false" whenempty="skip" update="false">
 			<fileset dir="src/" includes="**/*.java"			/>
 		</zip>
 	</target>
 
-	<target name="build.jars" depends="init" description="Build all the jars for the plug-in: org.eclipse.datatools.sqltools.db.generic.">
-		<available property="genericdb.jar" file="${build.result.folder}/genericdb.jar"/>
-		<antcall target="genericdb.jar"/>
+	<target name="build.jars" depends="init" description="Build all the jars for the plug-in: org.eclipse.datatools.sqltools.routineeditor.">
+		<available property="routineeditor.jar" file="${build.result.folder}/routineeditor.jar"/>
+		<antcall target="routineeditor.jar"/>
 	</target>
 
 	<target name="build.sources" depends="init">
-		<available property="genericdbsrc.zip" file="${build.result.folder}/genericdbsrc.zip"/>
-		<antcall target="genericdbsrc.zip"/>
+		<available property="routineeditorsrc.zip" file="${build.result.folder}/routineeditorsrc.zip"/>
+		<antcall target="routineeditorsrc.zip"/>
 	</target>
 
 	<target name="gather.bin.parts" depends="init" if="destination.temp.folder">
 		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${build.result.folder}" includes="genericdb.jar"			/>
+			<fileset dir="${build.result.folder}" includes="routineeditor.jar"			/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${basedir}" includes="plugin.xml,genericdb.jar,genericdb.jar,META-INF/,about.html,grammar/"			/>
+			<fileset dir="${basedir}" includes="META-INF/,routineeditor.jar,plugin.xml,routineeditor.jar,about.html,schema/"			/>
 		</copy>
-		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false">
-			<fileset dir="${basedir}" includes="genericdbsrc.zip"/>
+				<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false">
+			<fileset dir="${basedir}" includes="routineeditorsrc.zip"/>
 		</copy>
 	</target>
 
@@ -179,28 +201,28 @@
 
 	<target name="gather.sources" depends="init" if="destination.temp.folder">
 		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
-		<copy file="${build.result.folder}/genericdbsrc.zip" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
+		<copy file="${build.result.folder}/routineeditorsrc.zip" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
 	</target>
 
 	<target name="gather.logs" depends="init" if="destination.temp.folder">
 		<mkdir dir="${destination.temp.folder}/${module.name}_${plugin.version}"/>
-		<copy file="${temp.folder}/genericdb.jar.bin.log" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
+		<copy file="${temp.folder}/routineeditor.jar.bin.log" todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false"/>
 	</target>
 
-	<target name="clean" depends="init" description="Clean the plug-in: org.eclipse.datatools.sqltools.db.generic of all the zips, jars and logs created.">
-		<delete file="${build.result.folder}/genericdb.jar"/>
-		<delete file="${build.result.folder}/genericdbsrc.zip"/>
+	<target name="clean" depends="init" description="Clean the plug-in: org.eclipse.datatools.sqltools.routineeditor of all the zips, jars and logs created.">
+		<delete file="${build.result.folder}/routineeditor.jar"/>
+		<delete file="${build.result.folder}/routineeditorsrc.zip"/>
 		<delete file="${plugin.destination}/${module.name}_${plugin.version}.jar"/>
 		<delete file="${plugin.destination}/${module.name}_${plugin.version}.zip"/>
 		<delete dir="${temp.folder}"/>
 	</target>
 
 	<target name="refresh" depends="init" if="eclipse.running" description="Refresh this folder.">
-		<eclipse.convertPath fileSystemPath="C:/V3/3.1/eclipse/workspace-dtp/org.eclipse.datatools.sqltools.db.generic" property="resourcePath"/>
+		<eclipse.convertPath fileSystemPath="C:/V3/3.1/eclipse/workspace-dtp/org.eclipse.datatools.sqltools.routineeditor" property="resourcePath"/>
 		<eclipse.refreshLocal resource="${resourcePath}" depth="infinite"/>
 	</target>
 
-	<target name="zip.plugin" depends="init" description="Create a zip containing all the elements for the plug-in: org.eclipse.datatools.sqltools.db.generic.">
+	<target name="zip.plugin" depends="init" description="Create a zip containing all the elements for the plug-in: org.eclipse.datatools.sqltools.routineeditor.">
 		<delete dir="${temp.folder}"/>
 		<mkdir dir="${temp.folder}"/>
 		<antcall target="build.jars"/>
