--- a/plugins/org.eclipse.datatools.sqltools.sql/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sql/build.properties
@@ -4,3 +4,11 @@ bin.includes = META-INF/,\
                sqltools.jar,\
                icons/,\
                about.html
+
+jars.extra.classpath =
+src.dir =		src/
+plugin.version =	0.7.0
+javadoc.dir =		doc/api/
+download.dir =		./download/
+javac.source =		1.4
+javac.target =		1.4
