Add Preference Framework into common.ui plugin

--- a/plugins/org.eclipse.datatools.sqltools.common.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/build.properties
@@ -3,7 +3,8 @@ output.sqltoolscommonui.jar = bin/
 bin.includes = META-INF/,\
                sqltoolscommonui.jar,\
                icons/,\
-               about.html
+               about.html,\
+               plugin.xml
 
 jars.extra.classpath =
 src.dir = src/
