SQL Execution Plan View iteration 2 of M3

--- a/plugins/org.eclipse.datatools.sqltools.plan/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.plan/plugin.xml
@@ -2,5 +2,24 @@
 <?eclipse version="3.0"?>
 <plugin>
    <extension-point id="planService" name="SQL Execution Plan Service" schema="schema/planService.exsd"/>
+   <extension
+         point="org.eclipse.ui.views">
+      <view
+            class="org.eclipse.datatools.sqltools.plan.internal.ui.view.PlanView"
+            icon="icons/sqlplan.gif"
+            id="org.eclipse.datatools.sqltools.plan.planView"
+            name="%PlanView.name"/>
+   </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="org.eclipse.datatools.sqltools.plan.internal.preference.ExecutionPlanPage"
+            id="org.eclipse.datatools.sqltools.plan.executionPlanPage"
+            name="%PlanView.preferencePage.title"/>
+   </extension>
+   <extension
+         point="org.eclipse.core.runtime.preferences">
+      <initializer class="org.eclipse.datatools.sqltools.plan.internal.preference.ExecutionPlanInitializer"/>
+   </extension>
 
 </plugin>
