--- a/plugins/org.eclipse.datatools.sqltools.result/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.result/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.0"?>
 <plugin>
+   <extension-point id="reExecuteScript" name="Re-execute History Result Entry" schema="schema/reExecuteScript.exsd"/>
    <extension
          point="org.eclipse.ui.views">
       <view
